--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-I ran around the lake this morning. Sorta... I kinda ran - mostly around the lake... but it's a good start. Ivy got a crystal healing from Azelea today.
+Music room is all set up. Still missing a proper P.A. speaker - but the other last bits are on their way. : )
