Masterful, I think not

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-Music room is all set up. Still missing a proper P.A. speaker - but the other last bits are on their way. : )
+This Frontend Masters Ember course is not very enlightening. I think that ES6 is fantastic, but it seems pretty rude to assume that everyone is up to date - and not to even introduce the new syntax.
 
-This is now smart.
+Ember docs need a more inclusive 'what you should know before you begin' area.
+
+model() { return true } seems more special and mysterious than it should.
+
+Desctructuing seems expecially trolly when teaching someone.
