--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-This Frontend Masters Ember course is not very enlightening. I think that ES6 is fantastic, but it seems pretty rude to assume that everyone is up to date - and not to even introduce the new syntax.
-
-Ember docs need a more inclusive 'what you should know before you begin' area.
-
-model() { return true } seems more special and mysterious than it should.
-
-Desctructuing seems expecially trolly when teaching someone.
+Well, Ivy and I have been partnered up for 2 years today. We seem to enjoy each other - so we'll probably stick with that for the foreseeable future.
