Adds Important tests

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Well, Ivy and I have been partnered up for 2 years today. We seem to enjoy each other - so we'll probably stick with that for the foreseeable future.
+
+If ( this is a text document ) 
+	return "you'll see it"
