Makes it 20x cooler

--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-
-If ( this is a text document ) 
-	return "you'll see it"
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
+Cooler
