--- a/index.html
+++ b/index.html
@@ -1,30 +1,10 @@
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
-Clap
+
+<ul>
+	<li>Pineapple</li>
+	<li>Ivy</li>
+	<li>Being in water</li>
+	<li>Fun drinks</li>
+	<li>Solving puzzles</li>
+	<li>Learning new things</li>
+	<li>Watermellon</li>
+</ul>
